created sequential model

--- a/assignments/homework-1.ipynb
+++ b/assignments/homework-1.ipynb
@@ -230,6 +230,67 @@
     "bos_df = pd.DataFrame(boston.data, columns=boston.feature_names)\n",
     "bos_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split up the Boston data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = boston.data\n",
+    "y = boston.target\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.33, random_state = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scale the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "scaler.fit(x_train)\n",
+    "x_train_scaled = scaler.transform(x_train)\n",
+    "x_test_scaled = scaler.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a Sequential Kerras model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Dense(50, activation='relu'))\n",
+    "model.add(Dense(100, activation='relu'))\n",
+    "model.add(Dense(50, activation='relu'))\n",
+    "model.add(Dense(1))\n",
+    "\n",
+    "model.compile(loss='mse', optimizer='adam')"
+   ]
   }
  ],
  "metadata": {
