--- a/assignments/homework-1.ipynb
+++ b/assignments/homework-1.ipynb
@@ -401,6 +401,65 @@
     "y_pred = model.predict(x_test_scaled)\n",
     "mean_squared_error(y_test, y_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a linear regression model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.53045876597462"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linreg = LinearRegression()\n",
+    "linreg.fit(X_train_scaled, y_train)\n",
+    "y_pred = linreg.predict(X_test_scaled)\n",
+    "mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compare results of Sequential model to linear regression model:\n",
+    "- The sequential model works better when it has more than 12 epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
