--- a/assignments/homework-1.ipynb
+++ b/assignments/homework-1.ipynb
@@ -53,13 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.nn import softmax, sigmoid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
+    "from keras.layers import Dense, Flatten\n",
     "from keras.optimizers import SGD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pt 1: Keras Sequential Model with Boston Housing Dataset"
    ]
   },
   {
@@ -296,12 +312,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Determine loss function, optimizer and metrics for the model"
+    "### Train model on training data using model.fit for 12 epochs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -309,29 +325,29 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/12\n",
-      " - 0s - loss: 574.6649\n",
+      " - 0s - loss: 18.6241\n",
       "Epoch 2/12\n",
-      " - 0s - loss: 520.5897\n",
+      " - 0s - loss: 17.3152\n",
       "Epoch 3/12\n",
-      " - 0s - loss: 429.5957\n",
+      " - 0s - loss: 16.3311\n",
       "Epoch 4/12\n",
-      " - 0s - loss: 288.1066\n",
+      " - 0s - loss: 15.5704\n",
       "Epoch 5/12\n",
-      " - 0s - loss: 128.0009\n",
+      " - 0s - loss: 14.8984\n",
       "Epoch 6/12\n",
-      " - 0s - loss: 50.6648\n",
+      " - 0s - loss: 14.4199\n",
       "Epoch 7/12\n",
-      " - 0s - loss: 35.9288\n",
+      " - 0s - loss: 13.9767\n",
       "Epoch 8/12\n",
-      " - 0s - loss: 29.6732\n",
+      " - 0s - loss: 13.5282\n",
       "Epoch 9/12\n",
-      " - 0s - loss: 25.4676\n",
+      " - 0s - loss: 13.1412\n",
       "Epoch 10/12\n",
-      " - 0s - loss: 23.3583\n",
+      " - 0s - loss: 12.6999\n",
       "Epoch 11/12\n",
-      " - 0s - loss: 21.2979\n",
+      " - 0s - loss: 12.5985\n",
       "Epoch 12/12\n",
-      " - 0s - loss: 19.7959\n"
+      " - 0s - loss: 12.1335\n"
      ]
     }
    ],
@@ -350,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train model on training data using model.fit for 5 epoch"
+    "### Determine loss function, optimizer and metrics for the model"
    ]
   },
   {
@@ -441,11 +457,227 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pt 2: Keras Sequential Model with Diabetes Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes_df = pd.read_csv('/datasets/diabetes.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>148</td>\n",
+       "      <td>72</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>66</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>183</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>137</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>168</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+       "0            6      148             72             35        0  33.6   \n",
+       "1            1       85             66             29        0  26.6   \n",
+       "2            8      183             64              0        0  23.3   \n",
+       "3            1       89             66             23       94  28.1   \n",
+       "4            0      137             40             35      168  43.1   \n",
+       "\n",
+       "   DiabetesPedigreeFunction  Age  Outcome  \n",
+       "0                     0.627   50        1  \n",
+       "1                     0.351   31        0  \n",
+       "2                     0.672   32        1  \n",
+       "3                     0.167   21        0  \n",
+       "4                     2.288   33        1  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diabetes_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = diabetes_df.drop(['Outcome'], axis=1)\n",
+    "y = diabetes_df['Outcome']\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.25, random_state = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a Sequential Kerras model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential([\n",
+    "                Dense(128,activation = sigmoid),                          \n",
+    "                Dense(10,activation = softmax)])\n",
+    "\n",
+    "model.compile(optimizer = 'adam',loss='sparse_categorical_crossentropy',metrics =['accuracy'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.21653543307086615"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# standard_scaler = StandardScaler()\n",
+    "# X_train_scaled = standard_scaler.fit_transform(X_train)\n",
+    "# X_test_scaled = standard_scaler.transform(X_test)\n",
+    "logreg = LogisticRegression()\n",
+    "logreg.fit(x_train, y_train)\n",
+    "y_pred = logreg.predict(x_test)\n",
+    "mean_squared_error(y_test, y_pred)"
+   ]
   },
   {
    "cell_type": "code",
