--- a/assignments/homework-2.ipynb
+++ b/assignments/homework-2.ipynb
@@ -41,9 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.6 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.7\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +135,7 @@
        "(0, 255)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +180,7 @@
        "(0.0, 1.0)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +211,224 @@
    "metadata": {},
    "source": [
     "## <b>Step 4:</b> Define Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Layers\n",
+    "* Hidden Layer 1: Fully Conncted + Relu Activition (e.g. 512 Nuerons)\n",
+    " - Dense(n) is a fully-connected layer with n hidden units (Neurons).\n",
+    "* Hidden Layer 2: Fully Connected + Relu Activition (e.g. 512 Neurons)\n",
+    "* Outout Layer: Fully Connected + Softmax Activition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_1 (Dense)              (None, 512)               401920    \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 512)               262656    \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 10)                5130      \n",
+      "=================================================================\n",
+      "Total params: 669,706\n",
+      "Trainable params: 669,706\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential()\n",
+    "# Hidden Layer 1: Fully Conncted + Relu Activition (e.g. 512 Nuerons)\n",
+    "model.add(Dense(512, input_shape = (784,), activation = 'relu'))\n",
+    "# Hidden Layer 2: Fully Connected + Relu Activition (e.g. 512 Neurons)\n",
+    "model.add(Dense(512, activation='relu'))\n",
+    "# Outout Layer: Fully Connected + Softmax Activition\n",
+    "model.add(Dense(10, activation='softmax'))\n",
+    "# compile the model\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.01176471 0.07058824 0.07058824 0.07058824\n",
+      " 0.49411765 0.53333333 0.68627451 0.10196078 0.65098039 1.\n",
+      " 0.96862745 0.49803922 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.11764706 0.14117647 0.36862745 0.60392157\n",
+      " 0.66666667 0.99215686 0.99215686 0.99215686 0.99215686 0.99215686\n",
+      " 0.88235294 0.6745098  0.99215686 0.94901961 0.76470588 0.25098039\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.19215686\n",
+      " 0.93333333 0.99215686 0.99215686 0.99215686 0.99215686 0.99215686\n",
+      " 0.99215686 0.99215686 0.99215686 0.98431373 0.36470588 0.32156863\n",
+      " 0.32156863 0.21960784 0.15294118 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.07058824 0.85882353 0.99215686\n",
+      " 0.99215686 0.99215686 0.99215686 0.99215686 0.77647059 0.71372549\n",
+      " 0.96862745 0.94509804 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.31372549 0.61176471 0.41960784 0.99215686\n",
+      " 0.99215686 0.80392157 0.04313725 0.         0.16862745 0.60392157\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.05490196 0.00392157 0.60392157 0.99215686 0.35294118\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.54509804 0.99215686 0.74509804 0.00784314 0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.04313725\n",
+      " 0.74509804 0.99215686 0.2745098  0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.1372549  0.94509804\n",
+      " 0.88235294 0.62745098 0.42352941 0.00392157 0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.31764706 0.94117647 0.99215686\n",
+      " 0.99215686 0.46666667 0.09803922 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.17647059 0.72941176 0.99215686 0.99215686\n",
+      " 0.58823529 0.10588235 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.0627451  0.36470588 0.98823529 0.99215686 0.73333333\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.97647059 0.99215686 0.97647059 0.25098039 0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.18039216 0.50980392 0.71764706 0.99215686\n",
+      " 0.99215686 0.81176471 0.00784314 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.15294118 0.58039216\n",
+      " 0.89803922 0.99215686 0.99215686 0.99215686 0.98039216 0.71372549\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.09411765 0.44705882 0.86666667 0.99215686 0.99215686 0.99215686\n",
+      " 0.99215686 0.78823529 0.30588235 0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.09019608 0.25882353 0.83529412 0.99215686\n",
+      " 0.99215686 0.99215686 0.99215686 0.77647059 0.31764706 0.00784314\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.07058824 0.67058824\n",
+      " 0.85882353 0.99215686 0.99215686 0.99215686 0.99215686 0.76470588\n",
+      " 0.31372549 0.03529412 0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.21568627 0.6745098  0.88627451 0.99215686 0.99215686 0.99215686\n",
+      " 0.99215686 0.95686275 0.52156863 0.04313725 0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.53333333 0.99215686\n",
+      " 0.99215686 0.99215686 0.83137255 0.52941176 0.51764706 0.0627451\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.        ]\n",
+      "Epoch 1/10\n",
+      "60000/60000 [==============================] - 3s 44us/step - loss: 0.2465 - acc: 0.9278\n",
+      "Epoch 2/10\n",
+      "60000/60000 [==============================] - 2s 41us/step - loss: 0.0854 - acc: 0.9739\n",
+      "Epoch 3/10\n",
+      "60000/60000 [==============================] - 2s 40us/step - loss: 0.0527 - acc: 0.9838\n",
+      "Epoch 4/10\n",
+      "60000/60000 [==============================] - 2s 39us/step - loss: 0.0369 - acc: 0.9884\n",
+      "Epoch 5/10\n",
+      "60000/60000 [==============================] - 2s 39us/step - loss: 0.0254 - acc: 0.9920\n",
+      "Epoch 6/10\n",
+      "60000/60000 [==============================] - 2s 40us/step - loss: 0.0192 - acc: 0.9938\n",
+      "Epoch 7/10\n",
+      "60000/60000 [==============================] - 2s 41us/step - loss: 0.0176 - acc: 0.9938\n",
+      "Epoch 8/10\n",
+      "60000/60000 [==============================] - 2s 40us/step - loss: 0.0137 - acc: 0.9954\n",
+      "Epoch 9/10\n",
+      "60000/60000 [==============================] - 2s 41us/step - loss: 0.0126 - acc: 0.9958\n",
+      "Epoch 10/10\n",
+      "60000/60000 [==============================] - 2s 40us/step - loss: 0.0141 - acc: 0.9954\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train[0])\n",
+    "history = model.fit(X_train, y_train, epochs=10, batch_size=200)"
    ]
   },
   {
